--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -3,6 +3,7 @@
   height: calc(100% - 46px);
   padding: 10px 15px;
   overflow-wrap: break-word;
+  overflow-y: auto;
   outline: none;
   font-family: "Source Code Pro", monospace;
   font-size: 12px;
