--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -10,6 +10,7 @@
   line-height: 22px;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
+  white-space: pre;
 
   .mobileInput {
     position: absolute;
