--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -7,7 +7,7 @@
   outline: none;
   font-family: "Source Code Pro", monospace;
   font-size: 12px;
-  line-height: 1rem;
+  line-height: 1rem !important;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   white-space: pre-wrap;
